--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,57 @@
 # Prerequisites
 *.d
 
-# Object files
+# Compiled Object files
+*.slo
+*.lo
 *.o
-*.ko
 *.obj
-*.elf
-
-# Linker output
-*.ilk
-*.map
-*.exp
 
 # Precompiled Headers
 *.gch
 *.pch
 
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
+# Compiled Dynamic libraries
 *.so
-*.so.*
 *.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
 
 # Executables
 *.exe
 *.out
 *.app
-*.i*86
-*.x86_64
-*.hex
 
-# Debug files
-*.dSYM/
-*.su
-*.idb
+/Debug
+/Intermediate
+/.vs
+/resources
+/x64
+/thirdparty/Debug
+/thirdparty/.vs
+/thirdparty/Intermediate
+/thirdparty/sdlcl/Debug
+/thirdparty/sdl1/SDL_ttf-2.0.11/VisualC/Debug
+/thirdparty/sdl1/SDL_net-1.2.8/VisualC/Debug
+/thirdparty/sdl1/SDL_mixer-1.2.12/VisualC/Debug
+/thirdparty/sdl1/SDL_sound/VisualC/Debug
+/thirdparty/sdl1/SDL_mixer-1.2.12/VisualC/timidity/Debug
+/thirdparty/sdl1/SDL_mixer-1.2.12/VisualC/native_midi/Debug
+/thirdparty/sdl1/SDL_image-1.2.12/VisualC/Debug
+/thirdparty/sdl1/SDL_gfx-2.0.25/Debug
+/sdl1/VisualBoyAdvance/win32/SDLDebug
+thirdparty/sdl1/SDL-1.2.15/VisualC/SDL/Debug/SDL.pdb
+/library
+*.log
+*.tlog
 *.pdb
-
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
+.vs
